--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -2,23 +2,24 @@
 <html>
 <head>
   <meta charset=utf-8 />
-  <title> Ben Moore's CV</title>
+  <title> Hung N. Dong's CV</title>
   <link href="media/cv-screen.css" type="text/css" rel="stylesheet" media="screen">
   <link href="media/cv-print.css" type="text/css" rel="stylesheet" media="print">
   <link href="media/academicons.min.css" rel="stylesheet">
+  <link rel="shortcut icon" href="/media/favicon.ico">
 
   <!-- imports -->
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <div id="main">
-    <div id="content">
+  <main id="main">
+    <section id="content">
     {{ content }}
-    </div>
-  </div>
+    </section>
+  </main>
 
-  <div class="footer"></div>
+  <footer class="footer"></footer>
 
 </body>
 </html>
