--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -6,7 +6,7 @@
   <link href="media/cv-screen.css" type="text/css" rel="stylesheet" media="screen">
   <link href="media/cv-print.css" type="text/css" rel="stylesheet" media="print">
   <link href="media/academicons.min.css" rel="stylesheet">
-  <link rel="shortcut icon" href="/media/favicon.ico">
+  <link rel="shortcut icon" href="media/favicon.ico">
 
   <!-- imports -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
