--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <main id="main">
-    <section id="content">
+    <section id="content" class="container">
     {{ content }}
     </section>
   </main>
